admission/ValidatingAdmissionPolicy/policies/tls-hosts-match/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: ingress-tls-hosts-match-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 80c67576-1c3e-57d1-bef5-0a61666cd840
  labels:
    check-ingress-tls-hosts-match.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/warn: enabled
    check-ingress-tls-hosts-match.security.kolteq.com/audit: 'false-true'
    check-ingress-tls-hosts-match.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
spec:
  policyName: ingress-tls-hosts-match
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: check-ingress-tls-hosts-match.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: ingress-tls-hosts-match-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 80c67576-1c3e-57d1-bef5-0a61666cd840
  labels:
    check-ingress-tls-hosts-match.security.kolteq.com/warn: 'false-true'
    check-ingress-tls-hosts-match.security.kolteq.com/audit: 'false-true'
    check-ingress-tls-hosts-match.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: ingress-tls-hosts-match
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-ingress-tls-hosts-match.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: ingress-tls-hosts-match-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 80c67576-1c3e-57d1-bef5-0a61666cd840
  labels:
    check-ingress-tls-hosts-match.security.kolteq.com/audit: 'false-true'
    security.kolteq.com/audit: enabled
    check-ingress-tls-hosts-match.security.kolteq.com/enforce: 'false-true'
    check-ingress-tls-hosts-match.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: ingress-tls-hosts-match
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: check-ingress-tls-hosts-match.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: ingress-tls-hosts-match-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 80c67576-1c3e-57d1-bef5-0a61666cd840
  labels:
    check-ingress-tls-hosts-match.security.kolteq.com/audit: 'false-true'
    check-ingress-tls-hosts-match.security.kolteq.com/enforce: 'false-true'
    check-ingress-tls-hosts-match.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: ingress-tls-hosts-match
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-ingress-tls-hosts-match.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: ingress-tls-hosts-match-namespace-optout-enforce
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 80c67576-1c3e-57d1-bef5-0a61666cd840
  labels:
    check-ingress-tls-hosts-match.security.kolteq.com/enforce: 'false-true'
    security.kolteq.com/enforce: enabled
    check-ingress-tls-hosts-match.security.kolteq.com/audit: 'false-true'
    check-ingress-tls-hosts-match.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: ingress-tls-hosts-match
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: check-ingress-tls-hosts-match.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: ingress-tls-hosts-match-namespace-optin-enforce
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: 80c67576-1c3e-57d1-bef5-0a61666cd840
  labels:
    check-ingress-tls-hosts-match.security.kolteq.com/enforce: 'false-true'
    check-ingress-tls-hosts-match.security.kolteq.com/audit: 'false-true'
    check-ingress-tls-hosts-match.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  policyName: ingress-tls-hosts-match
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: check-ingress-tls-hosts-match.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
