admission/ValidatingAdmissionPolicy/policies/tls-hosts-match/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: ingress-tls-hosts-match
  annotations:
    security.kubeapt.io/displayName: 'Tls Hosts Match'
    security.kubeapt.io/description: Every host in spec.rules[*].host must appear in some spec.tls[*].hosts.
    security.kubeapt.io/resource: Ingresses
    security.kubeapt.io/severity: "7"
    security.kubeapt.io/remediation: "Ensure every spec.rules[*].host appears in spec.tls[*].hosts. Fields: spec.rules[].host, spec.tls[].hosts."
    policies.kolteq.com/validatingAdmissionPolicy: 80c67576-1c3e-57d1-bef5-0a61666cd840
  labels:
    check-ingress-tls-hosts-match.security.kolteq.com/audit: 'false-true'
    check-ingress-tls-hosts-match.security.kolteq.com/enforce: 'false-true'
    check-ingress-tls-hosts-match.security.kolteq.com/warn: 'false-true'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - networking.k8s.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - ingresses
  variables:
  - name: hosts
    expression: |
      has(object.spec.rules) ? object.spec.rules.filter(r, has(r.host)).map(r, r.host) : []
  validations:
  - expression: |
      size(variables.hosts) == 0 || (has(object.spec.tls) && variables.hosts.all(h,
        object.spec.tls.exists(t, has(t.hosts) && t.hosts.exists(th, th == h))
      ))
    message: |
      Every host in spec.rules[*].host must appear in some spec.tls[*].hosts.
